<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="org.itstep.liannoi.fractioncalculator.presentation.fractions.FractionsOperationType" />

        <variable
            name="viewmodel"
            type="org.itstep.liannoi.fractioncalculator.presentation.fractions.FractionsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/calc_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:gravity="end"
            android:hint="@string/calc_field_initial"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@={viewmodel.calc}"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calc_seven_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_field" />

        <Button
            android:id="@+id/calc_eighth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_eighth"
            app:layout_constraintStart_toEndOf="@+id/calc_seven_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_field" />

        <Button
            android:id="@+id/calc_ninth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_ninth"
            app:layout_constraintStart_toEndOf="@+id/calc_eighth_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_field" />

        <Button
            android:id="@+id/calc_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_clear"
            app:layout_constraintStart_toEndOf="@+id/calc_ninth_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_field" />

        <Button
            android:id="@+id/calc_fourth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_fourth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_seven_button" />

        <Button
            android:id="@+id/calc_fifth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_fifth"
            app:layout_constraintStart_toEndOf="@+id/calc_fourth_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_eighth_button" />

        <Button
            android:id="@+id/calc_sixth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_sixth"
            app:layout_constraintStart_toEndOf="@+id/calc_fifth_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_ninth_button" />

        <Button
            android:id="@+id/calc_divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="false"
            android:text="@string/calc_divide"
            app:layout_constraintStart_toEndOf="@+id/calc_sixth_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_clear_button" />

        <Button
            android:id="@+id/calc_first_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_fourth_button" />

        <Button
            android:id="@+id/calc_second_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_second"
            app:layout_constraintStart_toEndOf="@+id/calc_first_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_fifth_button" />

        <Button
            android:id="@+id/calc_third_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_third"
            app:layout_constraintStart_toEndOf="@+id/calc_second_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_sixth_button" />

        <Button
            android:id="@+id/calc_multiple_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="@{viewmodel.denominatorMode}"
            android:onClick="@{() -> viewmodel.prepareOperation(FractionsOperationType.MULTIPLICATION)}"
            android:text="@string/calc_multiple"
            app:layout_constraintStart_toEndOf="@+id/calc_third_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_divide_button" />

        <Button
            android:id="@+id/calc_zero_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/calc_zero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_first_button" />

        <Button
            android:id="@+id/calc_minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="@{viewmodel.denominatorMode}"
            android:onClick="@{() -> viewmodel.prepareOperation(FractionsOperationType.SUBTRACTION)}"
            android:text="@string/calc_minus"
            app:layout_constraintStart_toEndOf="@+id/calc_zero_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_second_button" />

        <Button
            android:id="@+id/calc_plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:enabled="@{viewmodel.denominatorMode}"
            android:onClick="@{() -> viewmodel.prepareOperation(FractionsOperationType.ADDITION)}"
            android:text="@string/calc_plus"
            app:layout_constraintStart_toEndOf="@+id/calc_minus_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_third_button" />

        <Button
            android:id="@+id/calc_calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{viewmodel::calculate}"
            android:text="@string/calc_calculate"
            app:layout_constraintStart_toEndOf="@+id/calc_plus_button"
            app:layout_constraintTop_toBottomOf="@+id/calc_multiple_button" />

        <Button
            android:id="@+id/calc_denominator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:enabled="@{!viewmodel.denominatorMode}"
            android:onClick="@{viewmodel::assignDenominator}"
            android:text="@string/calc_denominator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_calculate_button" />

        <TextView
            android:id="@+id/calc_last_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text='@{"Last Result: " + viewmodel.lastResult}'
            android:visibility="@{viewmodel.lastResult == null ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Last Result: 1/2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
